--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,40 @@ html {
   box-sizing: inherit;
 }
 
+/* slightly enhanced, universal clearfix hack */
+.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+/* close commented backslash hack */
+
 .container {
-  
+  max-width: 960px;
+  margin: 0 auto;
+  background-color: linen;
+}
+
+#board-wrapper {
+  max-width: 640px;
+  margin: auto;
+}
+
+#game-board {
+  margin: 0 auto;
+}
+
+.square {
+  float:left;
+  text-align: center;
+  background-color: lightgray;
+  font-size: 3em;
+  font-weight: bold;
 }
