--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,30 @@ html {
   max-width: 960px;
   margin: 0 auto;
   background-color: linen;
+  padding-top: 20px;
+}
+
+.info-panel {
+  background-color: navy;
+  /*height: 50px;*/
+  margin-top: 20px;
+  color: white;
+  padding: 10px;
+}
+
+.info-panel > div {
+  display: inline-block;
+}
+
+#players {
+  padding: 0;
+}
+
+#players li {
+  list-style-type: none;
+  display: inline;
+  margin: 10px;
+  padding: 10px;
 }
 
 #board-wrapper {
