--- a/css/style.css
+++ b/css/style.css
@@ -25,15 +25,15 @@ html {
   max-width: 960px;
   margin: 0 auto;
   background-color: linen;
-  padding-top: 20px;
+  padding: 20px 0 0 0;
 }
 
 .info-panel {
   background-color: navy;
   /*height: 50px;*/
-  margin-top: 20px;
   color: white;
   padding: 10px;
+  margin: 20px 0;
 }
 
 .info-panel > div {
@@ -54,7 +54,7 @@ html {
 
 #board-wrapper {
   max-width: 50%;
-  margin: auto;
+  margin: 50px auto;
 }
 
 #game-board {
