--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ html {
   max-width: 960px;
   margin: 0 auto;
   background-color: linen;
-  padding: 20px 0 0 0;
+  padding: 5px 0 0 0;
 }
 
 body {
@@ -36,6 +36,9 @@ body {
 
 h1 {
   text-align: center;
+  background-color: white;
+  padding: 10px 0;
+  border: 10px solid linen;
 }
 
 
